add: アップロード・再読み込み機能追加 * アップロード機能追加 * 明細書の再読み込み機能追加 * 2020年2月以前帳票の読み込みがずれる不具合を調整 * パラメータを環境変数から読み込む機能を追加

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "srv/.",
-            "args": ["-port", ":3001","-path", "../data" ],
+            "args": ["-port", ":3001","-datapath", "../data" ],
         }
     ]
 }
