update: フォルダ構成の変更

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
       "label": "react-start",
       "detail": "react-scripts start for debug",
       "type": "npm",
+      "path": "./front",
       "script": "start",
       "isBackground": true,
       "problemMatcher": [
