--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-/build
 /data
 /dist
-/convert/convert
-/node_modules
-/package-lock.json
-/srv/__debug_bin.exe
-/srv/static/static
-/srv/static/index.html
-/srv/static/favicon.ico
-/srv/static/asset-manifest.json
+/front/build
+/front/node_modules
+/front/package-lock.json
+/server/__debug_bin.exe
+/server/static/static
+/server/static/index.html
+/server/static/favicon.ico
+/server/static/asset-manifest.json
