--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,8 +19,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "srv/.",
-            "args": ["-port", ":3001","-datapath", "../data" ],
+            "program": "server/.",
+            "args": ["../data", "-port", ":3001" ],
         }
     ]
 }
