--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,6 @@
             "name": "debug react",
             "type": "pwa-chrome",
             "request": "launch",
-            "reAttach": true,
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}",
             "preLaunchTask": "react-start",
@@ -20,7 +19,12 @@
             "request": "launch",
             "mode": "auto",
             "program": "server/.",
-            "args": ["../data", "-port", ":3001" ],
+            "args": [
+                "-d",
+                "../data",
+                "-p",
+                ":3001"
+            ],
         }
     ]
 }
