--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -1,13 +1,16 @@
-FROM node:16-alpine
+FROM node:18-alpine
 RUN apk  --no-cache --update add go git tzdata poppler poppler-utils poppler-data && \
     cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
-    apk del tzdata
+    apk del tzdata && \
+    go install -v golang.org/x/tools/gopls@latest && \
+    go install -v github.com/go-delve/delve/cmd/dlv@latest && \
+    go install -v honnef.co/go/tools/cmd/staticcheck@latest
 
 WORKDIR /workspace/
-VOLUME [ "front-node_modules:/workspace/front/node_modules" ]
-
 RUN mkdir /workspace/front
+VOLUME [ "/workspace/front/node_modules" ]
+
 COPY ./front/package.json ./front
 RUN yarn --cwd /workspace/front
 
-ENTRYPOINT [ "yarn","--cwd","/workspace/front", "start" ]
+ENTRYPOINT [ "sh", "-c", "yarn serve yarn --cwd /workspace/front" ]
