--- a/front/package.json
+++ b/front/package.json
@@ -6,8 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "srvStart": "go run srv/main.go -port :80"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -15,8 +14,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.26",
