--- a/front/package.json
+++ b/front/package.json
@@ -3,24 +3,24 @@
   "version": "0.9.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "bulma": "^0.9.3",
+    "bulma": "^0.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.26",
+    "@types/node": "^18.0.0",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
-    "typescript": "^4.6.3"
+    "@vitejs/plugin-react": "^1.3.2",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.12",
+    "vite-plugin-singlefile": "^0.10.0-beta.2"
   },
   "eslintConfig": {
     "extends": [
