--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,8 +20,8 @@
           ],
           "background": {
             "activeOnStart": true,
-            "beginsPattern": "^Starting.*$",
-            "endsPattern": "^Compiled.*$"
+            "beginsPattern": "^.*start$",
+            "endsPattern": "^ready in .*$"
           },
         }
       ],
