--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "command": "npm start",
-            "name": "Run npm start",
+            "command": "npm dev",
+            "name": "Run npm dev",
             "request": "launch",
             "cwd": "${workspaceFolder}/front",
             "type": "node-terminal"
