--- a/front/package.json
+++ b/front/package.json
@@ -14,10 +14,11 @@
     "@tsconfig/svelte": "^2.0.1",
     "bulma": "^0.9.4",
     "svelte": "^3.44.0",
-    "svelte-spa-router": "^3.2.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
+    "svelte-spa-router": "^3.2.0",
     "tslib": "^2.3.1",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-singlefile": "^0.10.0-beta.2"
   }
 }
