update: viteプラグインを独自のものに変更

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -18,9 +18,13 @@
   },
   "include": [
     "*/**/*.d.ts",
+    "*.ts",
     "*/**/*.ts",
     "*/**/*.js",
     "*/**/*.svelte"
+  ],
+  "exclude": [
+    "*/dist/*.*",
   ],
   "references": [
     {
