--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "purgecss": "^4.1.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
     "bulma": "^0.9.4",
@@ -18,7 +19,6 @@
     "svelte-preprocess": "^4.9.8",
     "svelte-spa-router": "^3.2.0",
     "tslib": "^2.3.1",
-    "vite": "^2.9.9",
-    "vite-plugin-singlefile": "^0.10.0-beta.2"
+    "vite": "^2.9.9"
   }
 }
