--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "command": "npm dev",
-            "name": "Run npm dev",
+            "type": "msedge",
             "request": "launch",
-            "cwd": "${workspaceFolder}/front",
-            "type": "node-terminal"
-        },
-        {
-            "name": "debug react",
-            "type": "pwa-msedge",
-            "request": "launch",
+            "name": "Launch edge against localhost",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}",
+            "webRoot": "${workspaceFolder}/front",
+            "preLaunchTask": "npm: dev",
         },
         {
             "name": "go API Server",
