--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,48 +2,13 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "react-start",
-      "detail": "react-scripts start for debug",
       "type": "npm",
-      "path": "./front",
-      "script": "start",
+      "label": "npm: dev",
+      "script": "dev",
+      "problemMatcher": [],
+      "detail": "vite",
       "isBackground": true,
-      "problemMatcher": [
-        {
-          "pattern": [
-            {
-              "regexp": ".",
-              "file": 1,
-              "line": 1,
-              "message": 1
-            }
-          ],
-          "background": {
-            "activeOnStart": true,
-            "beginsPattern": "^.*start$",
-            "endsPattern": "^ready in .*$"
-          },
-        }
-      ],
-      "options": {
-        "env": {
-          "BROWSER": "none"
-        }
-      }
-    },
-    {
-      "label": "terminate-react-start",
-      "command": "${input:terminate}",
-      "type": "shell",
-      "problemMatcher": []
-    }
-  ],
-  "inputs": [
-    {
-      "id": "terminate",
-      "type": "command",
-      "command": "workbench.action.tasks.terminate",
-      "args": "react-start"
+      "path": "./front"
     }
   ]
 }
