--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,11 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "purgecss": "^4.1.3",
+    "@creativebulma/bulma-tagsinput": "^1.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
     "bulma": "^0.9.4",
+    "purgecss": "^4.1.3",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
