--- a/front/package.json
+++ b/front/package.json
@@ -10,15 +10,15 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@sveltejs/vite-plugin-svelte": "^1.0.9",
     "@tsconfig/svelte": "^3.0.0",
     "bulma": "^0.9.4",
-    "purgecss": "^4.1.3",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
+    "purgecss": "^5.0.0",
+    "svelte": "^3.51.0",
+    "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.9.8",
     "svelte-spa-router": "^3.3.0",
     "tslib": "^2.3.1",
-    "vite": "^3.0.5"
+    "vite": "^3.1.7"
   }
 }
