--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,11 @@ jobs:
         node-version: [18]
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-go@v3
-    - working-directory: ./front
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: yarn
-    - working-directory: ../
-    - run: .\build.sh
+        working-directory: ./front
+    - run: yarn --cwd ./front build
+    - uses: actions/setup-go@v3
