--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
     - name: yarn build
       working-directory: front
       run: |
+        mkdir dist
         yarn
         yarn build
     - uses: actions/setup-go@v3
