--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -5,6 +5,7 @@
     "useDefineForClassFields": true,
     "module": "esnext",
     "resolveJsonModule": true,
+    "importsNotUsedAsValues": "remove",
     "baseUrl": ".",
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
