--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./release_target.txt
-        asset_name: release_target.txt
-        asset_content_type: text/plain
+        asset_path: ./dist/sail
+        asset_name: sail
+        asset_content_type: application/octet-stream
