--- a/server/.goreleaser.yaml
+++ b/server/.goreleaser.yaml
@@ -1,18 +1,30 @@
+# This is an example .goreleaser.yml file with some sensible defaults.
+# Make sure to check the documentation at https://goreleaser.com
+
+# The lines below are called `modelines`. See `:help modeline`
+# Feel free to remove those if you don't want/need to use them.
+# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
+# vim: set ts=2 sw=2 tw=0 fo=cnqoj
+
+version: 1
+
 before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod tidy
     # you may remove this if you don't need go generate
     - go generate ./...
+
 builds:
   - env:
-      - CGO_ENABLED=0
+    - CGO_ENABLED=0
     goos:
       - linux
       - windows
+#    - darwin
     goarch:
-      - 386
-      - amd64
+#    - 386
+#      - amd64
 archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of uname.
@@ -25,12 +37,12 @@ archives:
       {{- if .Arm }}v{{ .Arm }}{{ end }}
     # use zip for windows archives
     format_overrides:
-    - goos: windows
-      format: zip
-checksum:
-  name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+      - goos: windows
+        format: zip
+#checksum:
+#  name_template: 'checksums.txt'
+#snapshot:
+#  name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
