fix: update goreleaser.yaml

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,7 +16,8 @@ before:
     - go generate ./...
 
 builds:
-  - env:
+  - main: ./server/main
+    env:
     - CGO_ENABLED=0
     goos:
       - linux
@@ -24,7 +25,8 @@ builds:
 #    - darwin
     goarch:
 #    - 386
-#      - amd64
+      - amd64
+
 archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of uname.
