--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,12 +8,12 @@
 
 version: 1
 
-before:
-  hooks:
+#before:
+  #hooks:
     # You may remove this if you don't use go modules.
-    - go mod tidy
+    #- go mod tidy
     # you may remove this if you don't need go generate
-    - go generate ./...
+    #- go generate ./...
 
 builds:
   - dir: ./server
@@ -22,10 +22,14 @@ builds:
     goos:
       - linux
       - windows
-#    - darwin
+      #- darwin
     goarch:
-#    - 386
+      #- 386
       - amd64
+    hooks:
+      pre: 
+        - cmd: go mod tidy
+          dir: ./server
 
 archives:
   - format: tar.gz
