--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
-    "resolveJsonModule": true,
+    "moduleResolution": "NodeNext",
     "importsNotUsedAsValues": "remove",
     "baseUrl": ".",
     /**
