--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,5 @@
 {
   "name": "sail",
-  "private": true,
-  "version": "0.6.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,15 +8,15 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.4.0",
-    "@tsconfig/svelte": "^3.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
+    "@types/node": "18.0.0",
     "bulma": "^0.9.4",
     "purgecss": "^5.0.0",
-    "svelte": "^3.53.1",
-    "svelte-check": "^2.10.1",
-    "svelte-preprocess": "^4.10.7",
-    "svelte-spa-router": "^3.3.0",
-    "tslib": "^2.4.1",
-    "vite": "^3.2.5"
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.6.2",
+    "svelte-spa-router": "^4.0.0",
+    "tslib": "^2.6.2",
+    "vite": "^5.0.9"
   }
 }
