update: パッケージの構成を変更 change package configuration

--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -1,5 +1,5 @@
 FROM node:18-alpine
-RUN apk  --no-cache --update add go git tzdata poppler poppler-utils poppler-data && \
+RUN apk  --no-cache --update add go git tzdata poppler poppler-utils poppler-data libwebp-dev && \
     cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
     apk del tzdata && \
     go install -v golang.org/x/tools/gopls@latest && \
