--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,10 +17,10 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "server/.",
+            "program": "./cmd/sail",
             "args": [
                 "-d",
-                "../data",
+                "../../data",
                 "-p",
                 ":3001",
                 "-w",
