--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,6 @@ jobs:
         node-version: [18]
     steps:
       - uses: actions/checkout@v3
-
       # build node.js
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -32,6 +31,10 @@ jobs:
         env:
           HTML: index.html
 
+      # install webp library
+      - name: Init go
+        run: |
+          sudo apt-get install webp
       # release
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
