--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       # install webp library
       - name: Init go
         run: |
-          sudo apt-get install webp libwebp
+          sudo apt-get install webp libwebp-dev
       # release
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
