ci: remove libwebp libwebpを削除

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -50,7 +50,7 @@ archives:
 #snapshot:
 #  name_template: "{{ incpatch .Version }}-next"
 changelog:
-  sort: asc
+  use: github-native
   filters:
     exclude:
       - '^docs:'
