--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,13 +31,11 @@ jobs:
         env:
           HTML: index.html
 
-      # install webp library
-      - name: Init go
-        run: |
-          sudo apt-get install webp libwebp-dev
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.21.x"
       # release
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+      - uses: goreleaser/goreleaser-action@v5
         with:
           args: release --clean
         env:
