--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sail",
   "type": "module",
+  "license":"MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -8,15 +9,15 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@tsconfig/svelte": "^5.0.2",
-    "@types/node": "18.0.0",
-    "bulma": "^0.9.4",
-    "purgecss": "^5.0.0",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
-    "svelte-spa-router": "^4.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^20.12.12",
+    "bulma": "^1.0.1",
+    "purgecss": "^6.0.0",
+    "svelte": "^4.2.17",
+    "svelte-check": "^3.7.1",
+    "svelte-spa-router": "^4.0.1",
     "tslib": "^2.6.2",
-    "vite": "^5.0.9"
+    "vite": "^5.2.11"
   }
 }
