--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -9,6 +9,11 @@
     "importsNotUsedAsValues": "remove",
     "resolvePackageJsonImports": false,
     "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    },
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
